Removed the scrollbar from the pages Corrected errors on text Removed name from login screen

--- a/website/styles/baseStyle.css
+++ b/website/styles/baseStyle.css
@@ -4,6 +4,7 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
+    overflow: hidden;
 }
 
 #header {
